--- a/PROD/CONF/SPOOL/load-spark-tf-base-group-conso-month.conf
+++ b/PROD/CONF/SPOOL/load-spark-tf-base-group-conso-month.conf
@@ -16,12 +16,12 @@ flux.name = "LOAD_SPARK_TF_BASE_GROUP_CONSO_MONTH"
 flux.has-date-processing = true
 
 flux.slice-value-type = "MONTHLY"
-flux.slice-begin-value = -18
+flux.slice-begin-value = -4
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-has-state-query=true
+flux.slice-has-state-query=false
 flux.slice-state-query="""
 select  if(count(*)=18,'OK','NOK')
 
@@ -29,7 +29,7 @@ from dim.dt_dates
 where datecode between date_sub(current_date, 18) and date_sub(current_date, 1)
     and datecode in (select distinct TRANSACTION_DATE from MON.SPARK_TF_BASE_GROUP_CONSO_MONTH where TRANSACTION_DATE between date_sub(current_date, 18) and date_sub(current_date, 1))
 """
-flux.slice-has-filter-query = true
+flux.slice-has-filter-query = false
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM')
@@ -42,7 +42,9 @@ flux.slice-date-format = "yyyy-MM"
 flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
+flux.inline.exec-queries += "INSERT INTO MON.SPARK_TF_SPECIFIC_SUBSCRIPTION_MONTH  VALUES('999999999','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0',CURRENT_TIMESTAMP,'###SLICE_VALUE###')"
 flux.inline.exec-queries += "ALTER TABLE MON.SPARK_TF_SPECIFIC_SUBSCRIPTION_MONTH DROP PARTITION(EVENT_MONTH = '###SLICE_VALUE###')"
+flux.inline.exec-queries += "INSERT INTO MON.SPARK_TF_GLOBAL_CONSO_MSISDN_MONTH VALUES('999999999','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0','0',CURRENT_TIMESTAMP,'###SLICE_VALUE###')"
 flux.inline.exec-queries += "ALTER TABLE MON.SPARK_TF_GLOBAL_CONSO_MSISDN_MONTH DROP PARTITION(EVENT_MONTH = '###SLICE_VALUE###')"
 flux.pre-exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_BASE_GROUPE_CONSO_LOCALISATION/prequery_spool_tf_base_group_conso_month.hql"
 flux.exec-queries += "/PROD/SCRIPTS/SPOOL/SPOOL_BASE_GROUPE_CONSO_LOCALISATION/compute_and_insert_into_spark_tf_specific_subscription_month_bri.hql"
