--- a/PROD/CONF/FT_VAS_RETAILLER_IRIS/load-spark-it-vas-retrailler-iris.conf
+++ b/PROD/CONF/FT_VAS_RETAILLER_IRIS/load-spark-it-vas-retrailler-iris.conf
@@ -6,11 +6,7 @@ flux.spark.setup-conf = []
 flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
-
-
-flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
-flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
-flux.spark.setup-conf += {"key": "spark.sql.session.timeZon","value": "UTC"}
+flux.spark.setup-conf += {"key": "spark.sql.session.timeZone","value": "UTC"}
 
 flux.name = "LOAD_SPARK_IT_VAS_RETRAILLER_IRIS"
 
