--- a/PROD/CONF/SPOOL/load-spark-tf-base-group-conso-month.conf
+++ b/PROD/CONF/SPOOL/load-spark-tf-base-group-conso-month.conf
@@ -21,21 +21,21 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-has-state-query=false
+flux.slice-has-state-query=true
 flux.slice-state-query="""
-select  if(count(*)=18,'OK','NOK')
-
+select
+    if(count(distinct date_format(datecode,'yyyy-MM')) = 4, 'OK', 'NOK')
 from dim.dt_dates
-where datecode between date_sub(current_date, 18) and date_sub(current_date, 1)
-    and datecode in (select distinct TRANSACTION_DATE from MON.SPARK_TF_BASE_GROUP_CONSO_MONTH where TRANSACTION_DATE between date_sub(current_date, 18) and date_sub(current_date, 1))
+where substring(datecode, 1, 7) between substring(add_months(current_date, -4), 1, 7) and substring(add_months(current_date, -1), 1, 7)
+    and substring(datecode, 1, 7) in (select distinct base_month from MON.SPARK_TF_BASE_GROUP_CONSO_MONTH where base_month between substring(add_months(current_date, -4), 1, 7) and substring(add_months(current_date, -1), 1, 7))
 """
-flux.slice-has-filter-query = false
+flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
-    date_format(datecode,'yyyy-MM')
+    distinct date_format(datecode,'yyyy-MM')
 from dim.dt_dates
-where datecode between date_sub(current_date, 18) and date_sub(current_date, 1)
-    and datecode in (select distinct TRANSACTION_DATE from MON.SPARK_TF_BASE_GROUP_CONSO_MONTH where TRANSACTION_DATE between date_sub(current_date, 18) and date_sub(current_date, 1))
+where substring(datecode, 1, 7) between substring(add_months(current_date, -4), 1, 7) and substring(add_months(current_date, -1), 1, 7)
+    and substring(datecode, 1, 7) in (select distinct base_month from MON.SPARK_TF_BASE_GROUP_CONSO_MONTH where base_month between substring(add_months(current_date, -4), 1, 7) and substring(add_months(current_date, -1), 1, 7))
 """
 flux.slice-date-format = "yyyy-MM"
 
