--- a/PROD/CONF/FT_VAS_RETAILLER_IRIS/load-spark-it-vas-retrailler-iris.conf
+++ b/PROD/CONF/FT_VAS_RETAILLER_IRIS/load-spark-it-vas-retrailler-iris.conf
@@ -20,7 +20,7 @@ flux.hdfs.move-to-arch = true
 flux.hdfs.src-arch-dir-regex = "/PROD/TT/VAS_RETAIL/*"
 flux.hdfs.dest.arch-dir = "/PROD/ARCH/VAS_RETAIL"
 flux.hdfs.dest.has-sub-dir = true
-flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
+flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{4}-\\d{2}-\\d{2})"
 
 flux.has-pre-queries = false
 flux.has-exec-queries = true
