--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -914,3 +914,19 @@ crontasks +=
       , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_FT_ACTIVATION_BY_IDENTIF_DAY",
+    cron = "0 17 */1 * * ?",
+    configFile = "/PROD/CONF/sqoop-cron-tasks.conf",
+    taskType = "SQOOP",
+    taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "240 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
