--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-emergency-credit-activity.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-emergency-credit-activity.conf
@@ -30,7 +30,7 @@ flux.name = "LOAD_SPARK_FT_EMERGENCY_CREDIT_ACTIVITY"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -7
+flux.slice-begin-value = -208
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -69,7 +69,7 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
 flux.inline.exec-queries += "INSERT INTO MON.SPARK_TT_EMERGENCY_CREDIT_ACTIVITY VALUES('650408170','ACTIVE','PREPAID FLEX PLUS','2017-11-01 00:00:00.0','2022-06-02 00:00:00.0','2022-06-02 00:00:00.0','0','5513','150','1','0','0','0','0','0','0','0','0','0','0','0','0','1999-01-01 00:00:00.0','2019-07-24 10:41:42.0','0','1999-01-01 00:00:00.0','ZTE','IT_EC_EXTRACT','2019-11-01 16:17:53.555','###SLICE_VALUE###')"
-flux.inline.exec-queries += "ALTER TABLE  MON.SPARK_TT_EMERGENCY_CREDIT_ACTIVITY DROP PARTITION(EVENT_DATE='###SLICE_VALUE###')"
+flux.inline.exec-queries += "TRUNCATE TABLE  MON.SPARK_TT_EMERGENCY_CREDIT_ACTIVITY"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EMERGENCY_CREDIT/compute_and_insert_into_spark_tt_emergency_credit_activity.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EMERGENCY_CREDIT/compute_and_insert_into_spark_ft_emergency_credit_activity.hql"
 
