--- a/PROD/CONF/OM/load-spark-it-omny-account-snapshot.conf
+++ b/PROD/CONF/OM/load-spark-it-omny-account-snapshot.conf
@@ -6,6 +6,8 @@ flux.input-type = "HIVE"
 flux.output-type = "HIVE"
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+flux.spark.setup-conf += {"key": "hive.enforce.bucketing", "value": "false"}
+flux.spark.setup-conf += {"key": "hive.enforce.sorting", "value": "false"}
 
 
 flux.name = "LOAD_SPARK_IT_OMNY_ACCOUNT_SNAPSHOT"
