--- a/PROD/CONF/EXPORT/OM/CNC/load-export-cnc-ouverture-compte.conf
+++ b/PROD/CONF/EXPORT/OM/CNC/load-export-cnc-ouverture-compte.conf
@@ -19,15 +19,17 @@ flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
 select
-    case when sum(case when status = 'OK' then 1 else 0 end) = 288 then 'OK' else 'NOK' end
+    case when count(*) = 288 then 'OK' else 'NOK' end
 from
 (
     select
-        first_value(status) over (partition by event_date order by insert_date desc) status
+        status,
+        row_number() over(partition by event_date order by insert_date desc) rang
     from mon.export_history
     where job_instanceid = 'LOAD_EXPORT_CNC_OUVERTURE_COMPTE'
     and event_date between date_sub(current_date, 288) and date_sub(current_date, 1)
-) T
+) R
+where status = 'OK' and rang = 1
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
@@ -68,4 +70,4 @@ flux.hdfs.output-format = "csv"
 flux.hdfs.output-has-header = "true"
 flux.hdfs.output-separator = ";"
 flux.hdfs.output-mode = "overwrite"
-flux.hdfs.output-path = "/PROD/EXPORT/OM/CNC"
+flux.hdfs.output-path = "/PROD/EXPORT/OM/CNC/CIPMM01"
