--- a/PROD/CONF/BDI/load-spark-it-bdi-art.conf
+++ b/PROD/CONF/BDI/load-spark-it-bdi-art.conf
@@ -18,25 +18,25 @@ flux.name = "LOAD_SPARK_IT_BDI_ART"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -30
-flux.slice-end-value = -1
+flux.slice-begin-value = -7
+flux.slice-end-value = 0
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
-select  if(count(*)=30,'OK','NOK')
+select  if(count(*)=8,'OK','NOK')
 from dim.dt_dates
-where datecode between date_sub(current_date, 30) and date_sub(current_date, 1)
-    and datecode in (select distinct ORIGINAL_FILE_DATE from CDR.SPARK_IT_BDI_ART where ORIGINAL_FILE_DATE between date_sub(current_date, 30) and date_sub(current_date, 1))
+where datecode between date_sub(current_date, 8) and current_date
+    and datecode in (select distinct ORIGINAL_FILE_DATE from CDR.SPARK_IT_BDI_ART where ORIGINAL_FILE_DATE between date_sub(current_date, 8) and current_date)
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
-where datecode between date_sub(current_date, 30) and date_sub(current_date, 1)
-    and datecode in (select distinct ORIGINAL_FILE_DATE from CDR.SPARK_IT_BDI_ART where ORIGINAL_FILE_DATE between date_sub(current_date, 30) and date_sub(current_date, 1))
+where datecode between date_sub(current_date, 8) and current_date
+    and datecode in (select distinct ORIGINAL_FILE_DATE from CDR.SPARK_IT_BDI_ART where ORIGINAL_FILE_DATE between date_sub(current_date, 8) and current_date)
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
