--- a/PROD/CONF/EXPORT/IRIS/load-export-cbm-handset-monthly-iris.conf
+++ b/PROD/CONF/EXPORT/IRIS/load-export-cbm-handset-monthly-iris.conf
@@ -10,8 +10,8 @@ flux.name = "LOAD_EXPORT_CBM_HANDSET_MONTHLY_IRIS"
 
 flux.has-date-processing = true
 
-flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -7
+flux.slice-value-type = "MONTHLY"
+flux.slice-begin-value = -5
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -19,7 +19,7 @@ flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
 select
-    case when count(*) = 7 then 'OK' else 'NOK' end
+    case when count(*) = 5 then 'OK' else 'NOK' end
 from
 (
     select
@@ -27,17 +27,17 @@ from
         row_number() over(partition by event_date order by insert_date desc) rang
     from mon.export_history
     where job_instanceid = 'LOAD_EXPORT_CBM_HANDSET_MONTHLY_IRIS'
-    and event_date between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and event_date between date_sub(current_date, 5) and date_sub(current_date, 1)
 ) R
 where status = 'OK' and rang = 1
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
-    date_format(datecode,'yyyy-MM-dd')
+    date_format(datecode,'yyyy-MM')
 from
 dim.dt_dates
-where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+where datecode between date_sub(current_date, 5) and date_sub(current_date, 1)
 and datecode in
 (
     select event_date
@@ -48,12 +48,12 @@ and datecode in
             row_number() over(partition by event_date order by insert_date desc) rang
         from mon.export_history
         where job_instanceid = 'LOAD_EXPORT_CBM_HANDSET_MONTHLY_IRIS'
-        and event_date between date_sub(current_date, 7) and date_sub(current_date, 1)
+        and event_date between date_sub(current_date, 5) and date_sub(current_date, 1)
     ) T
     where status = 'OK' and rang = 1
 )
 """
-flux.slice-date-format = "yyyy-MM-dd"
+flux.slice-date-format = "yyyy-MM"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
