--- a/PROD/CONF/OM/load-spark-ft-om-bicec-transaction.conf
+++ b/PROD/CONF/OM/load-spark-ft-om-bicec-transaction.conf
@@ -6,32 +6,33 @@ flux.output-type = "HIVE"
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.enforce.bucketing", "value": "false"}
+flux.spark.setup-conf += {"key": "spark.debug.maxToStringFields", "value": "100"}
 
 flux.name = "LOAD_SPARK_FT_OM_BICEC_TRANSACTION"
 
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -14
-flux.slice-end-value = 0
+flux.slice-begin-value = -61
+flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
 select
-    if(count(*)=8,'OK','NOK')
+    if(count(*)=61,'OK','NOK')
 from dim.dt_dates
-where datecode between date_sub(current_date, 7) and date_sub(current_date, 0)
-    and datecode in (select distinct event_date from mon.SPARK_FT_OM_BICEC_TRANSACTION where event_date between date_sub(current_date, 7) and date_sub(current_date, 0))
+where datecode between date_sub(current_date, 61) and date_sub(current_date, 1)
+    and datecode in (select distinct event_date from mon.SPARK_FT_OM_BICEC_TRANSACTION where event_date between date_sub(current_date, 61) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
-where datecode between date_sub(current_date, 7) and date_sub(current_date, 0)
-    and datecode in (select distinct event_date from mon.SPARK_FT_OM_BICEC_TRANSACTION where event_date between date_sub(current_date, 7) and date_sub(current_date, 0))
+where datecode between date_sub(current_date, 61) and date_sub(current_date, 1)
+    and datecode in (select distinct event_date from mon.SPARK_FT_OM_BICEC_TRANSACTION where event_date between date_sub(current_date, 61) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
@@ -39,6 +40,7 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/prequery_spark_ft_om_bicec_transaction.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/validate_ttvmw_om_bicec_trans.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/OM/FT_OM_BICEC_TRANSACTION/compute_and_insert_into_spark_ft_om_bicec_transaction.hql"
